--- a/index.html
+++ b/index.html
@@ -1,45 +1,64 @@
-<html>
-    <!DOCTYPE html>
-    <html lang="de">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IPWA01</title>
-        <style type="text/css">
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IPWA01</title>
+    <style type="text/css">
+        * {
+            box-sizing: border-box;
+        }
 
-             
-            header nav {float: right;width: 40%; background-color: blueviolet;}
-            main {float: right; width: 60%; background-color: aqua;}
+        header nav {float: left;width: 40%;background-color: #aaf;}
 
-            footer{clear: both;background-color: darkblue;}
-            footer nav ul {text-align: center;}
-            footer nav ul li{clear:both; display: inline;}
+        main {float: left;width: 60%;background-color: aqua;}
 
-            </style>
-    </head>
-    <body>
-        <header>
-       <nav>
-        <ul>
-            <li><a href="home.html">Homepage</a></li>
-            <li><a href="verview.html">Über uns</a></li> 
-            <li><a href="donation.html">Kleiderspende registrieren</a></li>
-        </ul>
-       </nav>
-        </header>
-       <main>
+        .container {display: flex;flex-wrap: wrap;}
+
+        footer {clear: both;background-color: #faa;}
+
+        footer nav ul {text-align: center; padding: 0;}
+
+        footer nav ul li {clear: both;display: inline;}
+
+        nav ul {list-style: none;padding: 0;}
+
+        @media (max-width: 768px) {
+            header nav,
+            main {
+                float: none;
+                width: 100%;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="home.html">Homepage</a></li>
+                    <li><a href="verview.html">Über uns</a></li> 
+                    <li><a href="donation.html">Kleiderspende registrieren</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
         <h1 id="main-title">Kleider für alle - Spenden.Teilen.Helfen</h1>
         <section>
             <h1 id="section-title">Altkleidercontainer oder Online-Registrierung?</h1>
-            <p> Die Jacke </p>
-            <p> Das alte </p>
-            <p> Entscheiden Sie bei uns selbst, in welche Region ihre Kleidung gesendet wird. </p>
-            <p></p>
-            <h2> Was muss ich tun?</h2>
-            <p> Einfach das Online-Formular ausfüllen und fertig - Wir kümmern uns um den Rest!</p>
+            <p>Die Jacke</p>
+            <p>Das alte</p>
+            <p>Entscheiden Sie bei uns selbst, in welche Region Ihre Kleidung gesendet wird.</p>
+            <h2>Was muss ich tun?</h2>
+            <p>Einfach das Online-Formular ausfüllen und fertig – Wir kümmern uns um den Rest!</p>
         </section>
-       </main>
-       <footer>
+    </main>
+
+    <footer>
         <nav>
             <ul>
                 <li><a href="privacy.html">Datenschutz</a></li>
@@ -47,7 +66,7 @@
                 <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
-       </footer>  
-    </body>
-    </html>
+    </footer>  
+
+</body>
 </html>
