--- a/index.html
+++ b/index.html
@@ -1,72 +1,87 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPWA01</title>
-    <style type="text/css">
-        * {
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kleiderspende</title>
 
-        header nav {float: left;width: 40%;background-color: #aaf;}
-
-        main {float: left;width: 60%;background-color: aqua;}
-
-        .container {display: flex;flex-wrap: wrap;}
-
-        footer {clear: both;background-color: #faa;}
-
-        footer nav ul {text-align: center; padding: 0;}
-
-        footer nav ul li {clear: both;display: inline;}
-
-        nav ul {list-style: none;padding: 0;}
-
-        @media (max-width: 768px) {
-            header nav,
-            main {
-                float: none;
-                width: 100%;
-            }
-        }
-    </style>
+  <!-- ✅ Bootstrap 5 einbinden -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
 
-    <header>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="home.html">Homepage</a></li>
-                    <li><a href="verview.html">Über uns</a></li> 
-                    <li><a href="donation.html">Kleiderspende registrieren</a></li>
-                </ul>
-            </nav>
+  <!-- ✅ Navigation -->
+  <header class="bg-primary text-white py-3">
+    <nav class="container nav justify-content-center">
+      <a class="nav-link text-white" href="home.html">Homepage</a>
+      <a class="nav-link text-white" href="verview.html">Über uns</a>
+      <a class="nav-link text-white" href="donation.html">Kleiderspende registrieren</a>
+    </nav>
+  </header>
+
+  <!-- ✅ Hauptinhalt -->
+  <main class="container py-4">
+    <h1 class="text-center mb-4">Kleider für alle – Spenden. Teilen. Helfen.</h1>
+
+    <section>
+      <h2 class="h4 mb-3">Altkleidercontainer oder Online-Registrierung?</h2>
+      <p>Die Jacke</p>
+      <p>Das alte</p>
+      <p>Entscheiden Sie bei uns selbst, in welche Region Ihre Kleidung gesendet wird.</p>
+
+      <h3 class="mt-4">Was muss ich tun?</h3>
+      <p>Einfach das Online-Formular ausfüllen und fertig – Wir kümmern uns um den Rest!</p>
+    </section>
+
+    <section id="Kleiderspende" class="mt-5">
+      <h2 class="mb-4 text-center"> Jetzt Kleiderspende registrieren </h2>
+      <form>
+
+        <div class="mb-3 text-center">
+          <label class="form-label">Wie möchten Sie spenden?</label><br>
         </div>
-    </header>
+      <div class="mb-4 d-flex justify-content-between">
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="art" id="uebergabe" value="uebergabe" checked>
+          <label class="form-check-label" for="uebergabe">
+            Übergabe an der Geschäftsstelle
+          </label>
+        </div>
 
-    <main>
-        <h1 id="main-title">Kleider für alle - Spenden.Teilen.Helfen</h1>
-        <section>
-            <h1 id="section-title">Altkleidercontainer oder Online-Registrierung?</h1>
-            <p>Die Jacke</p>
-            <p>Das alte</p>
-            <p>Entscheiden Sie bei uns selbst, in welche Region Ihre Kleidung gesendet wird.</p>
-            <h2>Was muss ich tun?</h2>
-            <p>Einfach das Online-Formular ausfüllen und fertig – Wir kümmern uns um den Rest!</p>
-        </section>
-    </main>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="art" id="abholung" value="abholung">
+          <label class="form-check-label" for="abgabe">
+            Abholung bei Ihnen zu Hause
+          </label>
+        </div>
+      </div>
 
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="privacy.html">Datenschutz</a></li>
-                <li><a href="imprint.html">Impressum</a></li>
-                <li><a href="contact.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </footer>  
+      <div id="adresse" style="display: none;">
+        <div class="mb-3">
+          <label class="form-label" for="straße">Straße & Hausnummer</label>
+          <input type="text" class="form-control" id="straße" name="straße">
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="plz">Postleitzahl</label>
+          <input type="text" class="form-control" id="plz" name="plz">
+        </div>
+      </div>
+
+
+      </form>
+    </section>
+
+    </section>
+  </main>
+
+  <!-- ✅ Footer -->
+  <footer class="bg-light text-center py-3 border-top">
+    <nav>
+      <a class="mx-2" href="privacy.html">Datenschutz</a> |
+      <a class="mx-2" href="imprint.html">Impressum</a> |
+      <a class="mx-2" href="contact.html">Kontakt</a>
+    </nav>
+  </footer> 
 
 </body>
 </html>
